--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<title>Varnam 2k17</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 		<link href="css/main.css" rel="stylesheet">
 		<link href="css/animate.css" rel="stylesheet">
 		<link href="css/responsive.css" rel="stylesheet">
@@ -78,24 +79,9 @@
 						<h2>our next event in</h2>
 					</div>
 					<div class="col-sm-7 col-md-6">
-						<ul id="countdown">
-							<li>
-								<span class="days time-font">00</span>
-								<p>days </p>
-							</li>
-							<li>
-								<span class="hours time-font">00</span>
-								<p class="">hours </p>
-							</li>
-							<li>
-								<span class="minutes time-font">00</span>
-								<p class="">minutes</p>
-							</li>
-							<li>
-								<span class="seconds time-font">00</span>
-								<p class="">seconds</p>
-							</li>
-						</ul>
+						<div class='wrap' ng-app='app'>
+							<span countdown='' date='March 10, 2017 12:00:00' class="time-to"></span>
+						</div>
 					</div>
 				</div>
 				<div class="cart">
@@ -278,7 +264,7 @@
 			</div>
 		</footer>
 		<!--/#footer-->
-
+		<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js'></script>
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
@@ -289,5 +275,6 @@
 		<script type="text/javascript" src="js/jquery.scrollTo.js"></script>
 		<script type="text/javascript" src="js/jquery.nav.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
+		<script type="text/javascript" src="js/timer.js"></script>
 	</body>
 </html>
