--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<div class="row">
 
 					<div class="col-md-4 col-md-offset-2 col-sm-5">
-						<h2>our next event in</h2>
+						<h2>Starts In</h2>
 					</div>
 					<div class="col-sm-7 col-md-6">
 						<div class='wrap' ng-app='app'>
