--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				</div>
 			</div>
 		</header>
-		<section id="home">
+		<section id="home" class="section">
 			<div id="main-slider" class="carousel slide" data-ride="carousel">
 				<ol class="carousel-indicators">
 					<li data-target="#main-slider" data-slide-to="0" class="active"></li>
@@ -70,8 +70,7 @@
 			</div>
 		</section>
 		<!--/#home-->
-
-		<section id="explore">
+		<section id="explore" class="section">
 			<div class="container">
 				<div class="row">
 
@@ -89,7 +88,7 @@
 			</div>
 		</section><!--/#explore-->
 
-		<section id="event">
+		<section id="event" class="section">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-9">
@@ -169,7 +168,7 @@
 			</div>
 		</section><!--/#event-->
 
-		<section id="about">
+		<section id="about" class="section">
 			<div class="guitar2">
 				<img class="img-responsive" src="images/guitar2.jpg" alt="guitar">
 			</div>
@@ -181,9 +180,7 @@
 			</div>
 		</section><!--/#about-->
 
-
-
-		<section id="sponsor">
+		<section id="sponsor" class="section">
 			<div id="sponsor-carousel" class="carousel slide" data-interval="false">
 				<div class="container">
 					<div class="row">
@@ -222,7 +219,7 @@
 			</div>
 		</section><!--/#sponsor-->
 
-		<section id="contact">
+		<section id="contact" class="section">
 
 			<div class="contact-section">
 				<div class="ear-piece">
