--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 						<div class="collapse navbar-collapse">
 							<ul class="nav navbar-nav navbar-right">
 								<li class="scroll active"><a href="#home">Home</a></li>
-								<li class="scroll"><a href="#explore">Explore</a></li>
-								<li class="scroll"><a href="#event">Event</a></li>
-								<li class="scroll"><a href="#about">About</a></li>
+								<li class="scroll"><a href="#explore">Events</a></li>
+								<li class="scroll"><a href="#event">About</a></li>
+								<li class="scroll"><a href="#about">Downloads</a></li>
 								<li class="scroll"><a href="#contact">Contact</a></li>
 							</ul>
 						</div>
@@ -185,18 +185,13 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-10">
-							<h2>Sponsors</h2>
+							<h2>Downloads</h2>
 							<a class="sponsor-control-left" href="#sponsor-carousel" data-slide="prev"><i class="fa fa-angle-left"></i></a>
 							<a class="sponsor-control-right" href="#sponsor-carousel" data-slide="next"><i class="fa fa-angle-right"></i></a>
 							<div class="carousel-inner">
 								<div class="item active">
 									<ul>
-										<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor1.png" alt=""></a></li>
-										<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor2.png" alt=""></a></li>
-										<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor3.png" alt=""></a></li>
-										<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor4.png" alt=""></a></li>
-										<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor5.png" alt=""></a></li>
-										<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor6.png" alt=""></a></li>
+										<li><h3><b><a href="files/file.pdf" target="_blank">File</a></b></h3></li>
 									</ul>
 								</div>
 								<div class="item">
