--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-9">
-						<div id="event-carousel" class="carousel slide" data-interval="false">
+						<div id="event-carousel2" class="carousel slide" data-interval="false">
 							<h2 class="heading">ON STAGE EVENTS</h2>
-							<a class="even-control-left" href="#event-carousel" data-slide="prev"><i class="fa fa-angle-left"></i></a>
-							<a class="even-control-right" href="#event-carousel" data-slide="next"><i class="fa fa-angle-right"></i></a>
+							<a class="even-control-left" href="#event-carousel2" data-slide="prev"><i class="fa fa-angle-left"></i></a>
+							<a class="even-control-right" href="#event-carousel2" data-slide="next"><i class="fa fa-angle-right"></i></a>
 							<div class="carousel-inner">
 								<div class="item active">
 									<div class="row">
