--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 					<div class="col-sm-12 col-md-9">
 						<div id="event-carousel2" class="carousel slide" data-interval="false">
 							<h2 class="heading">Rules and regulations</h2>
-							<iframe src="files/rules.pdf" width="300"></iframe>
+							<iframe src="files/rules.pdf"></iframe>
 						</div>
 					</div>
 				</div>
