--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 					<li data-target="#main-slider" data-slide-to="2"></li>
 				</ol>
 				<div class="carousel-inner">
+					
 					<div class="item active">
 						<img class="img-responsive" src="images/slider/bg1.jpg" alt="slider">
 					</div>
@@ -455,17 +456,22 @@
 							<div class="carousel-inner">
 								<div class="item active">
 									<ul>
-										<li><h3><b><a href="files/file.pdf" target="_blank">File</a></b></h3></li>
+										<li><h3><b><a href="files/rules.pdf" target="_blank">General Instructions</a></b></h3></li>
+										<li><h3><b><a href="files/file2.pdf" target="_blank">File</a></b></h3></li>
+										<li><h3><b><a href="files/file3.pdf" target="_blank">File</a></b></h3></li>
+										<li><h3><b><a href="files/fil4.pdf" target="_blank">File</a></b></h3></li>
+										<li><h3><b><a href="files/file5.pdf" target="_blank">File</a></b></h3></li>
+										<li><h3><b><a href="files/file6.pdf" target="_blank">File</a></b></h3></li>
 									</ul>
 								</div>
 								<div class="item">
 									<ul>
-										<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor6.png" alt=""></a></li>
-										<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor5.png" alt=""></a></li>
-										<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor4.png" alt=""></a></li>
-										<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor3.png" alt=""></a></li>
-										<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor2.png" alt=""></a></li>
-										<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor1.png" alt=""></a></li>
+										<li><h3><b><a href="files/file7.pdf" target="_blank">File</a></b></h3></li>
+										<li><h3><b><a href="files/file8.pdf" target="_blank">File</a></b></h3></li>
+										<li><h3><b><a href="files/file9.pdf" target="_blank">File</a></b></h3></li>
+										<li><h3><b><a href="files/file10.pdf" target="_blank">File</a></b></h3></li>
+										<li><h3><b><a href="files/file11.pdf" target="_blank">File</a></b></h3></li>
+										<li><h3><b><a href="files/file12.pdf" target="_blank">File</a></b></h3></li>
 									</ul>
 								</div>
 							</div>
