--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<li data-target="#main-slider" data-slide-to="2"></li>
 				</ol>
 				<div class="carousel-inner">
-					
+
 					<div class="item active">
 						<img class="img-responsive" src="images/slider/bg1.jpg" alt="slider">
 					</div>
@@ -111,19 +111,19 @@
 								<div class="item active">
 									<div class="row">
 										<div class="col-sm-4">
-											<div class="single-event btn btn-info" data-toggle="modal" data-target="#myModal">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#essay">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>Essay Writing</h4>
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#short">
 												<img class="img-responsive" src="images/event/event2.jpg" alt="event-image">
 												<h4>Short Story Writing</h4>
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#poetryw">
 												<img class="img-responsive" src="images/event/event3.jpg" alt="event-image">
 												<h4>Poetry Writing</h4>
 											</div>
@@ -133,21 +133,21 @@
 								<div class="item">
 									<div class="row">
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#poetryr">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>POETRY RECITATION </h4>
 
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#quiz">
 												<img class="img-responsive" src="images/event/event2.jpg" alt="event-image">
 												<h4>Quiz</h4>
 
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#elocution">
 												<img class="img-responsive" src="images/event/event3.jpg" alt="event-image">
 												<h4>Elocution</h4>
 
@@ -158,21 +158,21 @@
 								<div class="item">
 									<div class="row">
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#westvocal">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>Western Vocal Solo</h4>
 
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#instrument">
 												<img class="img-responsive" src="images/event/event2.jpg" alt="event-image">
 												<h4>Instrumental Music </h4>
 
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#painting">
 												<img class="img-responsive" src="images/event/event3.jpg" alt="event-image">
 												<h4>Painting </h4>
 
@@ -180,51 +180,44 @@
 										</div>
 									</div>
 								</div>
-                                <div class="item">
+								<div class="item">
 									<div class="row">
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#cartoon">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>Cartooning</h4>
 
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#pencil">
 												<img class="img-responsive" src="images/event/event2.jpg" alt="event-image">
 												<h4>Pencil Drawing</h4>
 
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#clay">
 												<img class="img-responsive" src="images/event/event3.jpg" alt="event-image">
 												<h4>Clay Modelling</h4>
-
 											</div>
 										</div>
 									</div>
 								</div>
-
-
-                                <div class="item">
+								<div class="item">
 									<div class="row">
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#collage">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>Collage</h4>
-
 											</div>
 										</div>
-
 										</div>
 									</div>
 								</div>
-
 							</div>
 						</div>
 					</div>
-
 				</div>
 			</div>
 		</section><!--/#event-->
@@ -239,7 +232,7 @@
 								<div class="item active">
 									<div class="row">
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#classical">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>Classical Music</h4>
 
@@ -253,7 +246,7 @@
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#mappila">
 												<img class="img-responsive" src="images/event/event3.jpg" alt="event-image">
 												<h4>Mappilapattu</h4>
 
@@ -264,21 +257,21 @@
 								<div class="item">
 									<div class="row">
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#adaptune">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>Adaptune (M/F)</h4>
 
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#folk">
 												<img class="img-responsive" src="images/event/event2.jpg" alt="event-image">
 												<h4>Folk Dance (M/F)</h4>
 
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#bharat">
 												<img class="img-responsive" src="images/event/event3.jpg" alt="event-image">
 												<h4>Bharathanatyam (G)</h4>
 
@@ -289,21 +282,21 @@
 								<div class="item">
 									<div class="row">
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#mono">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>Mono Act</h4>
 
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#mimicry">
 												<img class="img-responsive" src="images/event/event2.jpg" alt="event-image">
 												<h4>Mimicry</h4>
 
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#nadanpattu">
 												<img class="img-responsive" src="images/event/event3.jpg" alt="event-image">
 												<h4>Nadanpattu</h4>
 
@@ -314,24 +307,21 @@
 								<div class="item">
 									<div class="row">
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#groupd">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>Group Dance </h4>
-
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#groups">
 												<img class="img-responsive" src="images/event/event2.jpg" alt="event-image">
 												<h4>Group Song </h4>
-
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#acapella">
 												<img class="img-responsive" src="images/event/event3.jpg" alt="event-image">
 												<h4>Acapella</h4>
-
 											</div>
 										</div>
 									</div>
@@ -339,46 +329,44 @@
 								<div class="item">
 									<div class="row">
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#theme">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>Theme show</h4>
 
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#step">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>Step N Synchro</h4>
 
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#mime">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>Mime</h4>
-
 											</div>
 										</div>
-
 									</div>
 								</div>
 								<div class="item">
 									<div class="row">
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#tableaux">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>Tableaux<h4>
 
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#nostalgia">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>Nostalgia (Mixed)</h4>
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#skit">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>Skit</h4>
 											</div>
@@ -388,19 +376,19 @@
 									<div class="item">
 									<div class="row">
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#margam">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>Margam Kali<h4>
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#thirucathira">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>THIRUVATHIRAKALI</h4>
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#oppana">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>Oppana</h4>
 											</div>
@@ -410,26 +398,20 @@
 									<div class="item">
 									<div class="row">
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#vattappattu">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>VATTAPPATTU<h4>
-
 											</div>
 										</div>
-                                        <div class="col-sm-4">
-											<div class="single-event">
+                    <div class="col-sm-4">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#photo">
 												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
 												<h4>Spot photography</h4>
-
 											</div>
 										</div>
-
-
 										</div>
 									</div>
-
 								</div>
-
 							</div>
 						</div>
 					</div>
