--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 											</div>
 										</div>
 										<div class="col-sm-4">
-											<div class="single-event">
+											<div class="single-event btn btn-info" data-toggle="modal" data-target="#voice">
 												<img class="img-responsive" src="images/event/event2.jpg" alt="event-image">
 												<h4>Voice of MITS </h4>
 
