--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
 					</div>
 					<div class="modal-body">
 						<p>Some text in the modal.</p>
+						<img src="images/123.jpg">
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
