--- a/index.html
+++ b/index.html
@@ -603,19 +603,19 @@
 									<div class="row">
 										<div class="col-sm-4">
 											<div class="single-event btn btn-info" data-toggle="modal" data-target="#essay">
-												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+												<img class="img-responsive" src="images/event/essay.jpg" alt="event-image">
 												<h4>Essay Writing</h4>
 											</div>
 										</div>
 										<div class="col-sm-4">
 											<div class="single-event btn btn-info" data-toggle="modal" data-target="#short">
-												<img class="img-responsive" src="images/event/event2.jpg" alt="event-image">
+												<img class="img-responsive" src="images/event/story.jpg" alt="event-image">
 												<h4>Short Story Writing</h4>
 											</div>
 										</div>
 										<div class="col-sm-4">
 											<div class="single-event btn btn-info" data-toggle="modal" data-target="#poetryw">
-												<img class="img-responsive" src="images/event/event3.jpg" alt="event-image">
+												<img class="img-responsive" src="images/event/poetry.jpg" alt="event-image">
 												<h4>Poetry Writing</h4>
 											</div>
 										</div>
@@ -625,19 +625,19 @@
 									<div class="row">
 										<div class="col-sm-4">
 											<div class="single-event btn btn-info" data-toggle="modal" data-target="#poetryr">
-												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+												<img class="img-responsive" src="images/event/poetryrec.jpg" alt="event-image">
 												<h4>POETRY RECITATION </h4>
 											</div>
 										</div>
 										<div class="col-sm-4">
 											<div class="single-event btn btn-info" data-toggle="modal" data-target="#quiz">
-												<img class="img-responsive" src="images/event/event2.jpg" alt="event-image">
+												<img class="img-responsive" src="images/event/Quiz.jpg" alt="event-image">
 												<h4>Quiz</h4>
 											</div>
 										</div>
 										<div class="col-sm-4">
 											<div class="single-event btn btn-info" data-toggle="modal" data-target="#elocution">
-												<img class="img-responsive" src="images/event/event3.jpg" alt="event-image">
+												<img class="img-responsive" src="images/event/Elocution.jpg" alt="event-image">
 												<h4>Elocution</h4>
 											</div>
 										</div>
@@ -659,7 +659,7 @@
 										</div>
 										<div class="col-sm-4">
 											<div class="single-event btn btn-info" data-toggle="modal" data-target="#painting">
-												<img class="img-responsive" src="images/event/event3.jpg" alt="event-image">
+												<img class="img-responsive" src="images/event/painting.jpg" alt="event-image">
 												<h4>Painting </h4>
 											</div>
 										</div>
@@ -669,19 +669,19 @@
 									<div class="row">
 										<div class="col-sm-4">
 											<div class="single-event btn btn-info" data-toggle="modal" data-target="#cartoon">
-												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+												<img class="img-responsive" src="images/event/cartooning.jpg" alt="event-image">
 												<h4>Cartooning</h4>
 											</div>
 										</div>
 										<div class="col-sm-4">
 											<div class="single-event btn btn-info" data-toggle="modal" data-target="#pencil">
-												<img class="img-responsive" src="images/event/event2.jpg" alt="event-image">
+												<img class="img-responsive" src="images/event/pencil.jpg" alt="event-image">
 												<h4>Pencil Drawing</h4>
 											</div>
 										</div>
 										<div class="col-sm-4">
 											<div class="single-event btn btn-info" data-toggle="modal" data-target="#clay">
-												<img class="img-responsive" src="images/event/event3.jpg" alt="event-image">
+												<img class="img-responsive" src="images/event/clay.jpg" alt="event-image">
 												<h4>Clay Modelling</h4>
 											</div>
 										</div>
@@ -691,7 +691,7 @@
 									<div class="row">
 										<div class="col-sm-4">
 											<div class="single-event btn btn-info" data-toggle="modal" data-target="#collage">
-												<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+												<img class="img-responsive" src="images/event/collage.jpg" alt="event-image">
 												<h4>Collage</h4>
 											</div>
 										</div>
@@ -719,19 +719,19 @@
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#classical">
-											<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/classicalmusic.jpg" alt="event-image">
 											<h4>Classical Music</h4>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#voice">
-											<img class="img-responsive" src="images/event/event2.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/voiceofmits.jpg" alt="event-image">
 											<h4>Voice of MITS </h4>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#mappila">
-											<img class="img-responsive" src="images/event/event3.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/mapillapattu.jpg" alt="event-image">
 											<h4>Mappilapattu</h4>
 										</div>
 									</div>
@@ -741,19 +741,19 @@
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#adaptune">
-											<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/adaptune.jpg" alt="event-image">
 											<h4>Adaptune (M/F)</h4>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#folk">
-											<img class="img-responsive" src="images/event/event2.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/folkdance.jpg" alt="event-image">
 											<h4>Folk Dance (M/F)</h4>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#bharat">
-											<img class="img-responsive" src="images/event/event3.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/bharatyanatyam.jpg" alt="event-image">
 											<h4>Bharathanatyam (G)</h4>
 										</div>
 									</div>
@@ -763,19 +763,19 @@
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#mono">
-											<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/monoact.png" alt="event-image">
 											<h4>Mono Act</h4>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#mimicry">
-											<img class="img-responsive" src="images/event/event2.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/mimicry.jpg" alt="event-image">
 											<h4>Mimicry</h4>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#nadanpattu">
-											<img class="img-responsive" src="images/event/event3.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/nadanpattu.JPG" alt="event-image">
 											<h4>Nadanpattu</h4>
 										</div>
 									</div>
@@ -785,19 +785,19 @@
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#groupd">
-											<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/groupdance.jpg" alt="event-image">
 											<h4>Group Dance </h4>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#groups">
-											<img class="img-responsive" src="images/event/event2.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/groupsong.jpg" alt="event-image">
 											<h4>Group Song </h4>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#acapella">
-											<img class="img-responsive" src="images/event/event3.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/acapella.jpg" alt="event-image">
 											<h4>Acapella</h4>
 										</div>
 									</div>
@@ -807,19 +807,19 @@
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#theme">
-											<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/themeshow.jpg" alt="event-image">
 											<h4>Theme show</h4>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#step">
-											<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/step-and-synchro.jpg" alt="event-image">
 											<h4>Step N Synchro</h4>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#mime">
-											<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/mime.jpg" alt="event-image">
 											<h4>Mime</h4>
 										</div>
 									</div>
@@ -829,19 +829,19 @@
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#tableaux">
-											<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/tableaux.jpg" alt="event-image">
 											<h4>Tableaux</h4>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#nostalgia">
-											<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/nostalgia.jpg" alt="event-image">
 											<h4>Nostalgia (Mixed)</h4>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#skit">
-											<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/skit.jpg" alt="event-image">
 											<h4>Skit</h4>
 										</div>
 									</div>
@@ -851,19 +851,19 @@
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#margam">
-											<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/margamkali.jpg" alt="event-image">
 											<h4>Margam Kali</h4>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#thiruvathira">
-											<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/thiruvathira.jpg" alt="event-image">
 											<h4>THIRUVATHIRAKALI</h4>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#oppana">
-											<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/oppana.jpg" alt="event-image">
 											<h4>Oppana</h4>
 										</div>
 									</div>
@@ -873,13 +873,13 @@
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#vattappattu">
-											<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/vattapattu.jpg" alt="event-image">
 											<h4>VATTAPPATTU</h4>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-event btn btn-info" data-toggle="modal" data-target="#photo">
-											<img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
+											<img class="img-responsive" src="images/event/spotphoto.jpg" alt="event-image">
 											<h4>Spot photography</h4>
 										</div>
 									</div>
