--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 						<div class="collapse navbar-collapse">
 							<ul class="nav navbar-nav navbar-right">
 								<li class="scroll active"><a href="#home">Home</a></li>
-								<li class="scroll"><a href="#explore">Events</a></li>
-								<li class="scroll"><a href="#event">About</a></li>
-								<li class="scroll"><a href="#about">Downloads</a></li>
+								<li class="scroll"><a href="#event">Events</a></li>
+								<li class="scroll"><a href="#about">About</a></li>
+								<li class="scroll"><a href="#sponsor">Downloads</a></li>
 								<li class="scroll"><a href="#contact">Contact</a></li>
 							</ul>
 						</div>
@@ -703,7 +703,7 @@
 				</div>
 			</div>
 		</section>
-    	<section id="event2" class="section">
+    <section id="event2" class="section">
 			<div class="container">
 				<div class="col-sm-12 col-md-9">
 					<div id="event-carousel2" class="carousel slide" data-interval="false">
