--- a/index.html
+++ b/index.html
@@ -84,10 +84,17 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal">&times;</button>
-						<h4 class="modal-title">Modal Header</h4>
+						<h4 class="modal-title">Essay Writing</h4>
 					</div>
 					<div class="modal-body">
-						<p>Some text in the modal.</p>
+						<ol>
+							<li>Separate event for Malayalam and English</li>
+							<li>4 members from each House</li>
+							<li>No reference material will be permitted during the competition</li>
+							<li>Judgment will most likely be based on the qualities like the development of the theme, composition, tone, appropriateness of style, correctness of language,originality and general impression</li>
+							<li>Participants should bring the necessary writing material except Paper</li>
+							<li>Maximum time is 1 hr</li>
+						</ol>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
