--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 					</div>
 					<div class="modal-body">
 						<ol>
+							<li>Separate event for Malayalam and English</li>
 							<li> 4 members from each House</li>
 							<li> The topic will be given on the spot</li>
 							<li> The language of the competition shall be strictly used</li>
@@ -132,6 +133,7 @@
 					</div>
 					<div class="modal-body">
 						<ol>
+							<li>Separate event for Malayalam and English</li>
 							<li> 4 members from each House</li>
  						 	<li> Maximum time allowed for writing the Poetry is One hour</li>
  						 	<li> The topic will be given on the spot</li>
@@ -156,6 +158,7 @@
 					</div>
 					<div class="modal-body">
 						<ol>
+							<li>Separate event for Malayalam and English</li>
 							<li> 2 members from each House</li>
 							<li> Maximum time allowed is 10 minutes</li>
 							<li> Judgment will be based on clarity of speech, expression of emotion and ideas, Rhythm, Tone, general impression etc</li>
@@ -195,6 +198,7 @@
 					</div>
 					<div class="modal-body">
 						<ol>
+							<li>Separate event for Malayalam and English</li>
 							<li> 2 members from each House</li>
 							<li> The topic will be given 10 minutes before the start of the competition</li>
 							<li> After the release of the topic, participants will not be allowed to use mobile phone, laptop, to refer the books or to discuss</li>
@@ -233,6 +237,7 @@
 					</div>
 					<div class="modal-body">
 						<ol>
+							<li>Wind, Percussion, String</li>
 							<li> 2 participants from each House</li>
 							<li> Maximum time is 5 minutes</li>
 							<li> The participant can use only a single instrument</li>
@@ -251,6 +256,7 @@
 					</div>
 					<div class="modal-body">
 						<ol>
+							<li>Water, Acrylic</li>
 							<li> 3 Participants from each House</li>
 							<li> Item will be conducted on the spot</li>
 							<li> Duration will not be more than 2 hours</li>
@@ -378,6 +384,7 @@
 					</div>
 					<div class="modal-body">
 						<ol>
+							<li>Separate event for Malayalam and English</li>
 							<li> 2 members from each House</li>
 							<li> Maximum performance time– 7 mts</li>
 							<li> Karaoke / any single instrument is allowed</li>
@@ -416,6 +423,7 @@
 					</div>
 					<div class="modal-body">
 						<ol>
+							<li>Separate event for Malayalam and English</li>
 							<li> 2 members from each house</li>
 							<li> Participant should perform on a mix of three or four songs which will be played on the spot by the committee</li>
 							<li> Participant is free to use their imaginations and talent</li>
@@ -435,6 +443,7 @@
 					</div>
 					<div class="modal-body">
 						<ol>
+							<li>Separate event for Malayalam and English</li>
 							<li> 2 members from each House</li>
 							<li> Only CD/DVD/Pendrive is permitted  Can use pre-recorded songs/ Karaoke song</li>
 							<li> The Dance can be either primitive or a folk dance but not a classical one</li>
@@ -456,6 +465,7 @@
 					</div>
 					<div class="modal-body">
 						<ol>
+							<li>Only for Girls</li>
 							<li> 1 member from each House</li>
 							<li> Each participant will be allowed up to 15 minutes including time for preparation, exit etc</li>
 							<li> Only CD/DVD/Pendrive is permitted  Can use pre-recorded songs/ Karaoke song</li>
@@ -512,6 +522,7 @@
 					</div>
 					<div class="modal-body">
 						<ol>
+							<li>Group-boys only/girls only/mixed)</li>
 							<li> One Group from each house</li>
 							<li> Number of participants -10 Nos</li>
 							<li> Maximum time is 10 minutes This does not include setting time which shall not be more than 5 minutes</li>
@@ -533,6 +544,7 @@
 					</div>
 					<div class="modal-body">
 						<ol>
+							<li>Separate event for Malayalam and English</li>
 							<li> Maximum number of participants per group is 10 and minimum is 4</li>
 							<li> Judgment will be based on choreography, stage utilization, synchronization, costume etc</li>
 							<li> Maximum time is 10 minutes</li>
@@ -553,6 +565,7 @@
 					</div>
 					<div class="modal-body">
 						<ol>
+							<li>Indian Songs only</li>
 							<li> One Group from each house</li>
 							<li> Maximum number of singers in a group can be 6 Maximum number of</li>
 							<li> participants playing instruments (non-singers) shall be 3 In addition, singers are also allowed to play instruments</li>
@@ -681,6 +694,7 @@
 					</div>
 					<div class="modal-body">
 						<ol>
+							<li>Mixed even</li>
 							<li> One team from each house</li>
 							<li> Maximum number of participants allowed is 10</li>
 							<li> Participants should perform film songs which must be of films before 1990</li>
@@ -1220,5 +1234,9 @@
 		<script type="text/javascript" src="js/jquery.nav.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/timer.js"></script>
+		<script>
+			$(".modal-body > ol").prepend("<b>Rules</b>");
+			$(".modal-body > ol > b").css("textAlign","center");
+		</script>
 	</body>
 </html>
