--- a/index.html
+++ b/index.html
@@ -21,6 +21,31 @@
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+		<style>
+			@import url(https://fonts.googleapis.com/css?family=Bangers);
+			@media (max-width:499px)
+			{
+				.time-to
+				{
+					font-size:23px;
+					padding-top:24%;
+					margin-left:50%;
+					color:blue;
+					font-family:bangers;
+				}
+			}
+			@media (min-width:500px)
+			{
+				.time-to
+				{
+					font-size:50px;
+					padding-top:35%;
+					margin-left:60%;
+					color:#1e88e5;
+					font-family:bangers;
+				}
+			}
+		</style>
 	</head>
 	<body>
 		<header id="header" role="banner">
@@ -47,6 +72,9 @@
 		</header>
 		<section id="home" class="section">
 			<div id="main-slider" class="carousel slide" data-ride="carousel">
+				<div class='wrap' ng-app='app'>
+					<span countdown='' date='March 10, 2017 12:00:00' class="time-to"></span>
+				</div>
 				<ol class="carousel-indicators">
 					<li data-target="#main-slider" data-slide-to="0" class="active"></li>
 					<li data-target="#main-slider" data-slide-to="1"></li>
@@ -61,20 +89,6 @@
 					</div>
 					<div class="item">
 						<img class="img-responsive" src="images/slider/bg3.jpg" alt="slider">
-					</div>
-				</div>
-			</div>
-		</section>
-		<section id="explore" class="section">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-4 col-md-offset-2 col-sm-5">
-						<h2>Starts In	</h2>
-					</div>
-					<div class="col-sm-7 col-md-6">
-						<div class='wrap' ng-app='app'>
-							<span countdown='' date='March 10, 2017 12:00:00' class="time-to"></span>
-						</div>
 					</div>
 				</div>
 			</div>
