--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<section id="home" class="section">
 			<div id="main-slider" class="carousel slide" data-ride="carousel">
 				<div class='wrap' ng-app='app'>
-					<span countdown='' date='March 10, 2017 12:00:00' class="time-to"></span>
+					<span countdown='' date='March 10, 2017 12:00:00' class="time-to">Coming In</span>
 				</div>
 				<ol class="carousel-indicators">
 					<li data-target="#main-slider" data-slide-to="0" class="active"></li>
