--- a/index.html
+++ b/index.html
@@ -1247,7 +1247,7 @@
 		</section>
 		<section id="about" class="section">
 			<div class="guitar2">
-				<img class="img-responsive" src="images/guitar2.jpg" alt="guitar">
+				<img class="img-responsive" src="images/butterfly.png" alt="guitar">
 			</div>
 			<div class="about-content">
 				<h2>About Varnam</h2>
